--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "date-fns": "^2.14.0",
     "history": "^4.10.1",
     "jquery": "^3.5.0",
+    "moment": "^2.26.0",
     "node-sass": "^4.14.0",
     "prop-types": "^15.7.2",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-hotkeys": "^2.0.0",
+    "react-number-format": "^4.4.1",
     "react-redux": "^7.2.0",
     "react-router-dom": "^5.1.2",
     "react-router-redux": "^4.0.8",
